Tried to solve sort function, still doesn't work

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -60,6 +60,10 @@ form {
   overflow-wrap: break-word;
 }
 
+.disabled-textarea {
+  color: red;
+}
+
 .submit-button {
   border-radius: 20px;
   border: none;
