--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,6 +16,10 @@
   --valid-text-color: #000;
   --button-bg-color: #ffadad;
   --heart-bg-color: #a4a4a4;
+  --refresh-bg-color: #000;
+  --refresh-text-color: #fff;
+  --refresh-hover-bg-color: #fff;
+  --refresh-hover-text-color: #000;
 }
 
 body {
@@ -170,17 +174,13 @@ textarea:valid {
 .heart-emoji {
   border: none;
   border-radius: 50%;
-  /* width: 100%;
-  height: 100%; */
   width: 40px;
   height: 40px;
-  /* padding: 8px 16px 8px 12px; */
 }
 
 footer {
   margin: 12px;
   font-size: 16px;
-  /* font-style: italic; */
 }
 
 footer p {
@@ -208,15 +208,15 @@ footer p {
   border: 2px solid var(--border-color);
   border-radius: 20px;
   padding: 4px 12px;
-  background: black;
-  color: white;
+  background: var(--refresh-bg-color);
+  color: var(--refresh-text-color);
 }
 
 .refresh-button:hover,
 .refresh-button:focus {
   cursor: pointer;
-  background: white;
-  color: black;
+  background: var(--refresh-hover-bg-color);
+  color: var(--refresh-hover-text-color);
 }
 
 .reload-symbol {
