--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,13 @@
 body {
-  margin: 0;
+  margin: 40px 10px;
+  background: rgb(251, 63, 63);
+  background: radial-gradient(
+    circle,
+    rgba(251, 63, 63, 1) 0%,
+    rgba(228, 180, 228, 1) 100%
+  );
+  /* background-image: url("./hearts-bgr.jpg");
+  background-position: center; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,12 +22,19 @@ code {
 
 p {
   font-family: "Trispace", sans-serif;
+  word-wrap: break-word;
+  /* padding: 5px 20px; */
+}
+
+.letter-counter {
+  font-size: 12px;
 }
 
 .date {
-  color: lightgray;
+  color: rgb(165, 165, 165);
   float: right;
-  margin: 20px 20px 20px 0px;
+  margin: 20px 0px;
+  font-size: 12px;
 }
 
 .container {
@@ -30,12 +45,71 @@ p {
   margin-bottom: 40px;
 }
 
-.thoughts-wrapper {
+.thoughts-wrapper,
+.submit-wrapper {
   border: 1px solid black;
-  width: 500px;
+  width: 320px;
+  padding: 5px 10px;
+  box-shadow: 6px 6px #000;
+  background: white;
 }
 
-button {
+.submit-wrapper {
+  display: flex;
+  background: rgb(228, 228, 228);
+}
+
+.like-btn {
+  border: none;
+  background: pink;
   border-radius: 50%;
-  padding: 1%;
+  padding: 2%;
+  width: 40px;
+  margin: 10px 6px 0px 0px;
+}
+
+.likes-counter {
+  color: rgb(165, 165, 165);
+  font-size: 12px;
+}
+
+textarea {
+  width: 310px;
+  margin-bottom: 10px;
+}
+
+.submit-btn {
+  border: none;
+  background: pink;
+  border-radius: 30px;
+  padding: 2% 6%;
+  margin-bottom: 10px;
+}
+
+.thought-message {
+  height: 50%;
+}
+
+@media (min-width: 768px) {
+  .thoughts-wrapper,
+  .submit-wrapper {
+    width: 450px;
+    padding: 10px 20px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+  textarea {
+    width: 430px;
+  }
+
+  .likes-counter {
+    font-size: 15px;
+  }
+
+  .date {
+    margin-bottom: 10px;
+  }
 }
