--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
 code {
@@ -46,34 +47,93 @@ code {
     transform: rotate(360deg);
   }
 }
+
+.content-wrapper {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  min-width: 320px;
+  max-width: 500px;
+}
 .card {
-  width: 300px;
-  height: 200px;
-  margin: 20px 50px;
+  width: 90%;
+  box-shadow: 5px 5px black;
+  background-color: white;
+  word-break: break-word;
   padding: 10px 20px;
-  background-color: cornflowerblue;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  border: 2px solid black;
 }
 
-.icon {
-  fill: crimson;
-  stroke-opacity: 0;
-  background-color: cornflowerblue;
+/* All the elements in the Form component */
+.form {
+  background-color: #f0eeee;
+}
+.message-label {
+  line-height: 40px;
+}
+
+.form-title {
+  font-size: 16px;
+}
+
+.text-input {
+  width: 100%;
+  height: 60px;
+  padding: 5px 5px;
+}
+.inline-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.characters-left {
+  line-height: 10px;
+  font-size: 14px;
+}
+
+.btn-send-msg {
+  width: 200px;
+  height: 40px;
+  border-radius: 30px 30px 30px 30px;
+  background-color: #ffa3a3;
+  color: black;
+}
+
+/* div with liked thought */
+.likes-counter {
+  padding: 5px;
+  background-color: #ffa3a3;
+}
+.likes-text {
+  font-size: 16px;
+}
+
+/* SingleThought component styling */
+
+.like {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.heart-full {
+  fill: red;
 }
 
 .heart-wrapper {
   width: 40px;
   height: 40px;
-  background-color: darkkhaki;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.text-input {
-  display: block;
-  width: 250px;
-  height: 80px;
 }
 
 .too-long,
@@ -81,5 +141,18 @@ code {
   background-color: crimson;
 }
 .heart-button {
-  background-color: cornflowerblue;
+  width: 35px;
+  height: 35px;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.heart-button:hover {
+  background-color: #ffa3a3;
+  border-radius: 30px;
+}
+
+.small-icon {
+  width: 10px;
+  height: 10px;
 }
