--- a/code/src/index.css
+++ b/code/src/index.css
@@ -9,6 +9,7 @@ body {
   line-height: 23px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-wrap: break-word;
 }
 
 .date-text,
