adding hover buttons

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%
 }
 
 code {
@@ -71,6 +72,18 @@ code {
   /*animation-direction: alternate;*/
 }
 
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: linear-gradient(0deg, #FF9292 54%, #FFCCD2 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes pump {
   0%{
       transform: scale(1);
@@ -100,7 +113,7 @@ code {
   padding: 20px; 
   margin: 30px;
   box-sizing: content-box;
-  width: 80%;
+  width: 320px;
   height: fit-content;
   border: solid black 2px;
   background-color: lightgray;
@@ -119,13 +132,17 @@ code {
 .send-button {
 border: none;
 border-radius: 20%;
-padding: 5px;
+padding: 7px;
 margin-top: 10px;
 display: inline-flex;
 align-items: center ;
 color: black;
 background-color:#FF9292;
 width: fit-content;
+}
+
+.send-button:hover {
+  background-color: #FF7878;
 }
 
 /* answers container */
@@ -135,7 +152,7 @@ width: fit-content;
   padding: 20px; 
   margin: 30px;
   box-sizing: content-box;
-  width: 80%;
+  width: 320px;
   height: fit-content;
   border: solid black 2px;
   background-color: white;
@@ -156,6 +173,10 @@ width: fit-content;
   height: min-content;
   }
 
+  .heart-button:hover {
+    background-color: #FF7878;
+  }
+
   .date {
     font-style: italic;
     color: gray; 
@@ -165,4 +186,57 @@ width: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+  }
+
+  @media only screen and (min-device-width: 668px) and (max-device-width: 1023px) {
+    .form-container{
+      font-size: x-large;
+      width: 600px;
+      padding: 30px;
+      margin: 30px;
+    }
+    .answer-container{
+      font-size: larger;
+      width: 600px;
+      padding: 30px;
+      margin: 50px 30px 50px 30px;
+    }
+    .send-button {
+      margin-top: 20px;
+      font-size: medium;
+      padding: 10px
+    }
+    .heart-button {
+      font-size: medium;
+      margin-top: 10px;
+      padding: 10px;
+      font-size: medium;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .form-container{
+      font-size: x-large;
+      width: 900px;
+      padding: 40px;
+      margin: 50px 30px 50px 30px;
+    }
+    .answer-container{
+      font-size: x-large;
+      width: 900px;
+      padding: 40px 40px 20px 40px;
+      margin: 50px 30px 50px 30px;
+    }
+
+    .send-button {
+      margin-top: 20px;
+      padding: 10px;
+      font-size: medium;
+    }
+
+    .heart-button {
+      margin-top: 10px;
+      padding: 10px;
+      font-size: medium;
+    }
   }
