--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.thought-wrapper {
+  display: flex;
+  width: 300px;
+  padding: 16px;
+  margin-top: 80px;
+  margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid black;
+  
+}
+
+.date {
+  font-style: italic;
+}
+
+
