--- a/code/src/components/header.css
+++ b/code/src/components/header.css
@@ -1,11 +1,28 @@
 .happy-header {
-  height: 200px;
-  background: rgb(252, 178, 206, 0.5);
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-family: "Courier New", Courier, monospace;
   text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.background-img {
+  width: 100%;
+  height: 250px;
+  position: relative;
+}
+
+.happy-text-box {
+  position: absolute;
+  width: 300px;
+  background: white;
+  text-align: center;
+  padding: 10px;
+  border: 1px solid;
+  box-shadow: 10px 10px 40px 5px rgb(245, 69, 69);
 }
 
 .happy-header-title {
@@ -14,4 +31,10 @@
 
 .happy-header-text {
   font-style: italic;
+}
+
+@media (min-width: 760px) {
+  .happy-text-box {
+    width: fit-content;
+  }
 }
