--- a/code/src/components/thoughts.css
+++ b/code/src/components/thoughts.css
@@ -13,7 +13,7 @@
   justify-content: space-between;
 }
 
-.button {
+.heart-button {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   align-items: center;
@@ -24,7 +24,7 @@
 .heart {
   background: rgb(231, 229, 229);
   border-radius: 50%;
-  width: 25px;
+  width: 30px;
   font-size: 20px;
   margin: 0;
   color: red;
@@ -36,6 +36,11 @@
   font-size: 10px;
   color: rgb(196, 195, 195);
   padding-left: 5px;
+}
+
+.heart:hover {
+  background-color: rgb(247, 176, 176);
+  transition: 0.2s;
 }
 
 .created-text {
