--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,6 @@
 body {
 	margin: 10px;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+	font-family: 'Trispace', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -12,9 +10,65 @@ code {
 		monospace;
 }
 
-.date {
-	font-style: italic;
+/*-----------------Question Form------------- */
+
+.question-form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	row-gap: 20px;
+	border: solid black 1px;
+	padding: 20px;
+	margin: 25px auto;
+	box-shadow: 5px 5px;
+	background-color: #f2f0f0;
 }
+
+.thought-btn {
+	background-color: #ffadad;
+	padding: 10px;
+	border-radius: 20px;
+	color: black;
+	border: none;
+}
+
+/*-----------------ThoughtItem------------- */
+
+.thought-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	row-gap: 20px;
+	border: solid black 1px;
+	padding: 15px;
+	margin: 25px auto;
+	box-shadow: 5px 5px;
+}
+
+.thought-message {
+	width: 100%;
+}
+
+.heart-date-container {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	width: 100%;
+}
+
+.heart-btn {
+	border-radius: 50%;
+	padding: 13px;
+	background: #ffadad;
+	border: none;
+}
+
+.date {
+	color: #eaeaea;
+}
+/*-----------------spinner animation------------- */
 
 .loading-overlay {
 	position: absolute;
