--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,167 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 10;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
+  background-color: rgb(255, 220, 226);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+  margin: 10px 0;
+}
+
+.content-wrapper {
+  width: 450px;
+}
+
+.form-wrapper {
+  background-color: rgb(242, 240, 240);
+  border: 2px solid black;
+  box-shadow: 6px 8px;
+  margin: 30px 15px;
+  line-height: 1rem;
+  padding: 10px 15px 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.thought-input {
+  line-height: 4em;
+  border: 2px solid rgb(191, 191, 191);
+  margin-top: 12px;
+}
+
+.thought-text {
+  font-size: 12px;
+  letter-spacing: -0.5px;
+  /* margin-bottom: 12px; */
+}
+
+.thought-wrapper {
+  background-color: white;
+  border: 2px solid black;
+  box-shadow: 6px 6px;
+  margin: 30px 15px;
+  line-height: 1rem;
+  padding: 0 15px;
+}
+
+.form-btn {
+  width: 50%;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(255, 173, 173);
+  font-size: 12px;
+  font-weight: bold;
+  color: rgb(78, 52, 52);
+  cursor: pointer;
+}
+
+.message-text {
+  font-size: 14px;
+  overflow-wrap: break-word;
+  line-height: 2em;
+}
+
+.like-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  color: rgba(61, 61, 61, 0.8);
+  padding: 5px 0;
+  /* padding-bottom: 5px; */
+  margin-bottom: 8px;
+}
+
+.like-btn {
+  display: flex;
+  letter-spacing: 0.2em;
+  align-items: center;
+  color: rgb(162, 162, 162);
+  letter-spacing: -2px;
+  font-size: 12px;
+}
+
+.heart-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  background-color: rgb(234, 234, 234);
+  cursor: pointer;
+}
+
+.heart-btn-clicked {
+  background-color: rgb(255, 173, 173);
+}
+
+.date {
+  opacity: 0.5;
+  font-size: 11px;
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #ffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  height: 50px;
+  width: 50px;
+  border: 5px solid #dcdcdc;
+  border-radius: 50%;
+  border-left: 5px solid #ffff;
+  animation: spinner infinite 0.6s;
+  display: inline-block;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  13% {
+    transform: rotate(45deg);
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  38% {
+    transform: rotate(135deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  63% {
+    transform: rotate(225deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  88% {
+    transform: rotate(315deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
