--- a/code/src/components/ThoughtItem.css
+++ b/code/src/components/ThoughtItem.css
@@ -1,4 +1,5 @@
 .thought-form {
+    background-color: #fff;
     margin: 20px auto;
     border: 2px solid black;
     width: 500px;
@@ -28,7 +29,7 @@
   }
 
   .emoji {
-      padding-right: 4px;
+      padding-right: 2px;
   }
 
   .x-likes {
@@ -41,4 +42,20 @@
     font-size: 12px;
     display: block;
 }
-  
+
+
+/*Media Queries*/ /*Mobile*/
+@media (max-width: 666px) {
+   
+    .thought-form  {
+      width: 70%;
+      max-width: 500px;
+    }
+
+    .heart-likes-date-container {
+    width: 95%;   
+    font-size: 10px;
+    display: block;         
+}
+
+}
