--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,6 +13,10 @@ body {
 	-webkit-appearance: none;
 	-webkit-input: none;
 	-webkit-button: none;
+	background-image: url("/assets/heart-background.png");
+    background-size:contain;
+    background-position:top;
+    background: cover;
 }
 
 
