--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Trispace:100,200,300,regular,500,600,700,800");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Trispace', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffadad;
 }
 
 code {
@@ -16,9 +17,5 @@ code {
   font-style: italic;
 }
 
-.form {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-}
+
 
