Can now sort thoughts on newest and oldest

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -64,6 +64,10 @@ form {
   color: red;
 }
 
+.characters-left {
+  font-size: 15px;
+}
+
 .submit-button {
   border-radius: 20px;
   border: none;
@@ -81,12 +85,16 @@ form {
   margin: 0;
 }
 
-.filter-container {
-  margin-top: 10px;
+.sort-container {
+  margin-top: 15px;
 }
 
 select {
   font-family: 'PT Mono', monospace;
+  padding: 5px;
+  width: 90px;
+  border: 1px solid #000;
+  box-shadow: 3px 3px #000;
 }
 
 /*Default styling and color when not cliked*/
