--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,99 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.date {
+  font-style: italic;
+}
+
+.thought-wrapper {
+  border: 1px solid #000;
+  box-shadow: 7px 7px #000;
+  background: #f2f0f0;
+  width: 50vw;
+  margin: 30px auto;
+  padding: 20px 25px 5px;
+  position: relative;
+}
+
+.inputfield {
+  width: calc(50vw - 50px);
+  height: 60px;
+  padding: 10px;
+  margin: 10px auto 5px auto;
+  resize: none;
+}
+
+.ThoughtButton {
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  background-color: #ffadad;
+  padding: 10px 15px;
+  margin: 0 0 15px 0;
+}
+
+.ThoughtButton:hover {
+  box-shadow: 0 0 10px rgba(24, 23, 23, 0.6);
+}
+
+.message-wrapper {
+  border: 1px solid #000;
+  box-shadow: 7px 7px #000;
+  width: 50vw;
+  margin: 30px auto;
+  padding: 20px 25px 5px;
+  position: relative;
+}
+
+.heart-button {
+  background: #ffadad;
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  padding: 10px 5px;
+}
+
+.heart-button:hover {
+  box-shadow: 0 0 10px rgba(24, 23, 23, 0.6);
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #dcdcdc;
+  border-radius: 50%;
+  border-left: 5px solid #fff;
+  animation: spinner infinite 0.5s;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
