--- a/code/src/index.css
+++ b/code/src/index.css
@@ -33,17 +33,21 @@ main {
 }
 
 .count-text {
-  line-height: 6em;
+  /* line-height: 6em;   */
   border: 2px solid rgb(191, 191, 191);
   margin-top: 12px;
+  height: 50px;
+  padding: 10px;
   font-family: 'Roboto Mono', monospace;
   font-size: 10px;
 }
 
 .count-text-error {
-  line-height: 5em;
+  /* line-height: 5em; */
   border: 2px solid rgb(191, 191, 191);
   margin-top: 12px;
+  height: 50px;
+  padding: 10px;
   font-family: 'Roboto Mono', monospace;
   font-size: 10px;
   color: red;
