--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,8 +3,52 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+    font-weight: 700;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image:url(./assets/happy.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: rgba(246, 238, 238, 0.25);
+}
+
+.thought_wrapper{
+  border: 1px solid #000;
+  box-shadow: 7px 7px #000;
+  width: 50vw;
+  margin: 30px auto;
+  padding: 20px 25px 15px;
+  position: relative;
+}
+.thought_message{
+  word-wrap: break-word;
+}
+.add-thought_input-field {
+  width: calc (50vw 50px);
+  height: 60px;
+  font-family: "Inconsolata", monospace;
+  padding: 10px;
+  margin: 10px auto 5px auto;
+  resize: none;
+}
+.add-thought_button{
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  background: #ffadad;
+  padding: 10px 15px;
+  margin: 0 0 15px;
+  margin-top: 10px;
+}
+
+.add-thought_button:hover {
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(255, 173, 173, 0.6);
+}
+
+.add-thought_button:active {
+  background: rgba(255, 173, 173, 0.8);
 }
 
 code {
@@ -13,4 +57,63 @@ code {
 }
 .date{
   font-style: italic;
+}
+
+.loading-overlay{
+
+}
+.loading-spinner{
+  width: 50px;
+  height: 50px;
+  border:5px solid lightgray;
+  border-radius: 50%;
+  border-left: 5px solid #ffff;
+  animation: spinner infinite 0,5s;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+    100%{
+      transform: rotate (360deg);
+    }
+  }
+
+  @media (min-width: 1024px) {
+  .heart-counter__popup__wrapper {
+    right: 24vw;
+    top: 24vh;
+  }
+}
+ @media (max-width: 768px){
+   .thought_wrapper {
+     width: 70vw;
+   }
+   .add-thought_input-field {
+    width: calc(70vw - 50px);
+  }
+  }
+  @media (max-width: 560px) {
+  .thought__wrapper {
+    width: 90vw;
+  }
+
+  .add-thought__input-field {
+    width: calc(90vw - 50px);
+  }
+
+  .heart-counter__popup__wrapper {
+    top: 24vh;
+    right: 11vw;
+  }
+}
+@media (max-width: 375px) {
+  .heart-counter__popup__wrapper {
+    top: 27vh;
+    right: -2vw;
+  }
 }
