--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif; 
@@ -158,6 +158,9 @@ code {
 /* styling for tablet and desktop */
 
 @media only screen and (min-width: 768px) {
+  body {
+    font-size: 18px;
+  }
   .container {
     width: 600px;
   }
