--- a/code/src/index.css
+++ b/code/src/index.css
@@ -72,8 +72,8 @@ code {
   flex-direction: column;
   align-items: flex-start;
   margin-top: 40px;
-  gap: 10px;
-  border: 1px solid;
+  gap: 15px;
+  border: 2px solid;
   box-shadow: 8px 8px 0;
   padding: 20px;
   background-color: rgb(233, 231, 231);
@@ -85,7 +85,7 @@ code {
   box-sizing: content-box;
   outline: none;
   padding-inline-start: 6px;
-  padding-bottom: 15px;
+  padding-bottom: 25px;
   font-family: inherit;
   font-size: inherit;
 }
@@ -97,7 +97,7 @@ code {
   background: #DB398D;
   height: 50px;
   border-radius: 25px;
-  padding: 6px 14px;
+  padding: 10px 20px;
   color: #fff;
   font-size: inherit;
   font-weight: 700;
@@ -120,7 +120,7 @@ code {
   align-items: flex-start;
   margin-top: 30px;
   gap: 10px;
-  border: 1px solid;
+  border: 2px solid;
   box-shadow: 8px 8px 0;
   padding: 20px;
   word-break: break-word;
@@ -149,11 +149,12 @@ code {
   font-family: inherit;
   font-size: 24px;
   border: 1px solid transparent;
-  background: #DB398D;
+  /* background: #DB398D; */
+  background-color: rgb(233, 231, 231);
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  color: #fff;
+  color: red;
   font-weight: 700;
   cursor: pointer;
 }
@@ -162,13 +163,16 @@ code {
 
 @media only screen and (min-width: 768px) {
   body {
-    font-size: 18px;
+    font-size: 20px;
   }
   .container {
-    width: 600px;
+    width: 500px;
   }
   .date {
     grid-column: span 10;
+  }
+  .happy-form {
+    font-size: 16px;
   }
   .likes {
     grid-column: span 1;
