--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,7 +5,6 @@ body {
   font-family: Helvetica Monospaced;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 500;
   font-size: 16px;
   background: #fff;
   display: flex;
@@ -19,7 +18,9 @@ code {
 
 .date {
   font-style: italic;
-  font-size: 14px;
+  font-size: 12px;
+  color: #4d4d4d;
+  float: right;
 }
 
 form {
@@ -33,8 +34,8 @@ form {
   
 }
 form textarea {
-margin-top: 15px;
-padding: 5px
+  margin-top: 15px;
+  padding: 5px
 
 }
 
@@ -48,24 +49,26 @@ padding: 5px
 
 .heart-button {
   padding: 10px;
-  font-family: Helvetica Monospaced;
   font-size: 14px;
   border: 0;
-  background: #ffadad;
-  border-radius: 50px;
+  border-radius: 50%;
   cursor: pointer;
+  margin-top: 5px;
+  background: #ffadad; 
 }
 
 .character-counter {
-  font-size: 14px;
-  margin: 0;
-  text-align: right;
+  margin: 0 40px 0 0;
+  padding: 0;
+  font-size: 12px;
+  color: #4d4d4d;
+  float: right;
 }
 
 .toughts-box {
   width: 500px;
   margin-top: 40px;
-  padding: 10px 16px;
+  padding: 15px;
   box-shadow: 6px 7px;
   border: 2px solid #4d4d4d;
   flex-flow: column nowrap;
@@ -75,4 +78,9 @@ padding: 5px
 section {
   display: flex;
   flex-direction: column;
+}
+
+.thoughts-likes {
+  font-size: 12px;
+  color: #4d4d4d;
 }
