separated the code into components

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -60,7 +60,7 @@ margin: 0 auto;
 .form-container {
   margin: 10px;
 }
-.thoughts {
+.list {
   width: 80%;
   margin: 0 auto;
   border:1px solid black;
