--- a/code/src/index.css
+++ b/code/src/index.css
@@ -76,6 +76,37 @@ margin: 0 auto;
   grid-column: span 2;
 }
 
+.loading-overlay {
+  position:absolute;
+  top: 0;
+  right: 0;
+  bottom:0;
+  left:0;
+  background: #c4c1c1;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading-spinner{
+  width: 50px;
+  height:50px;
+  border: 2px solid #fa9696;
+  border-left: 2px solid #c4c1c1;
+  animation: spinner infinite 1.0s;
+}
+@keyframes spinner {
+    0% {
+      transform:rotate(0);
+    }
+
+    50% {
+      transform:rotate(180deg);
+    }
+    100% {
+      transform:rotate(360deg);
+    }
+  }
+
 
 
 
