--- a/code/src/Header.css
+++ b/code/src/Header.css
@@ -11,6 +11,7 @@
   box-shadow: 10px 10px;
 }
 .header-text{
+    font-family: 'Cairo', sans-serif;
     color: #FF7878;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     margin: 10px;
