--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,11 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: rgb(228, 169, 165);
 }
 
@@ -45,12 +46,13 @@ body {
   font-size: 18px;
 }
 
-input {
+textarea {
   margin-top: 20px;
   padding: 10px;
   padding-bottom: 40px;
   width: 90%;
   background-color: white;
+  resize: none;
 }
 
 .answer-card {
@@ -66,6 +68,8 @@ input {
 
 .answer {
   margin: 0 20px;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .heart-btn {
