minor style and readme

--- a/code/src/components/footer.css
+++ b/code/src/components/footer.css
@@ -1,6 +1,6 @@
 .happy-footer {
-  margin-top: 10px;
-  background: rgba(238, 187, 207, 0.8);
+  margin-top: 20px;
+  background: rgb(247, 176, 176);
   height: 100px;
   text-align: center;
   padding: 10px;
