--- a/code/src/components/thoughtInput.css
+++ b/code/src/components/thoughtInput.css
@@ -10,7 +10,7 @@
 }
 
 .input-title {
-  padding: 10px;
+  padding: 10px 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
 }
@@ -32,7 +32,7 @@
   border-top-right-radius: 25px;
   background: rgb(247, 176, 176);
   width: fit-content;
-  margin: 10px;
+  margin: 10px 0;
 }
 
 .send-thoughts-button:hover {
