--- a/code/src/index.css
+++ b/code/src/index.css
@@ -29,6 +29,7 @@ code {
   padding: 15px;
   box-shadow: 5px 5px;
   width: 80%;
+  margin-top: 30px;
 }
 
 .input {
@@ -93,5 +94,25 @@ code {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 768px) {
+  .main-container {
+    background-color: rgb(240, 239, 239);
+    margin: 20px;
+    padding-bottom: 30px;
+    box-shadow: 5px 5px rgb(245, 177, 169);
+    border-radius: 20px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .main-container {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+  .input-container {
+    width: 50%;
   }
 }
