--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,29 +16,30 @@ code {
 }
 
 .container {
-	padding: 15px 15px;
+	padding: 15px 25px;
 
 	display: grid;
 	grid-template-columns: 1fr;
 	justify-content: center;
-	grid-gap: 25px;
 	background-color: rgb(255, 255, 255);
 	
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
 /* Make a post area */
+
+
+.messageContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto;
+	grid-gap: 25px;
+	align-items: center;
+	justify-items: center;
+	width: 100%;
+	
+}
 
 .contentTextArea {
 	display: flex;
@@ -54,7 +55,7 @@ code {
 	height: 140px;
 	white-space: normal;
 	word-break: normal;
-	padding: 10px 10px;
+	padding: 10px 15px;
 	font-size: 15px;
 	font-weight: 700;
 }
@@ -63,7 +64,7 @@ code {
 	display: flex;
 	justify-content: center;
 	height: 40px;
-	margin: 5px 5px 15px 0px;
+	margin: 5px 0px 15px 0px;
 	
 	
 
@@ -102,6 +103,21 @@ textarea:focus {
 	
   }
 
+.counterButton{
+
+display: flex;
+justify-content: space-between;
+align-items: center;
+
+}
+
+.counterText{
+	font-size: 12px;
+	color: rgb(170, 168, 168);
+
+
+}
+
 
 
 .PostBtn {
@@ -126,40 +142,49 @@ textarea:focus {
 
 /* Message container  */
 
-.messageContainer {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: auto;
-	grid-gap: 25px;
-	align-items: center;
-	justify-items: center;
-	width: 100%;
-	
-}
+
+
 .content {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: flex-start;
-
 	border: rgb(0, 0, 0) 1px solid;
 	box-shadow: 12px 12px 1px -5px black;
 	width: 95%;
 	max-width: 450px;
-	height: 100px;
-	padding: 5px 10px 15px 15px;
-	font-size: 17px;
-	font-family: monospace;
-	font-weight: 600;
-	line-height: 20px;
+	height: 130px;
+	padding: 0px 15px 15px 15px;
+	margin-top: 25px;
 	color: #37352f;
-	word-break: normal;
+	
+
+
+}
+
+/* Text-box message */
+
+
+.TextPost{
+width: 100%;
+height: 70%;
+margin-bottom: 5px;
+padding: 10px 0;
+word-break: normal;
 	line-break:normal;
 	overflow: hidden;
     overflow-wrap: break-word;
-	
-
 }
+
+.TextPost p{
+text-align: start;
+font-size:  1.2em;
+font-family: monospace;
+font-weight: 600;
+line-height: 17px;
+}
+
+
 
 
 /* Icon and timestamp */
@@ -170,7 +195,8 @@ textarea:focus {
 width: 100%;
 display: flex;
 justify-content: space-between;
-
+align-items: center;
+height: 30%;
 }
 
 
@@ -209,4 +235,25 @@ font-weight: 100;
 
 }
 
+@media (max-width:500px) {
+	
+	.TextPost p{
+		font-weight: 650;
+		font-size:  1.1em;
+		line-height: 15px;
+		}
 
+
+}
+
+@media (max-width:380px) {
+	
+	.TextPost p{
+		font-weight: 700;
+		font-size:  0.90em;
+		
+		
+		}
+
+
+}
