added function to submit thought on keyPress 'enter', added reload button on bottom of screen

--- a/code/src/components/ThoughtItem.css
+++ b/code/src/components/ThoughtItem.css
@@ -9,6 +9,15 @@
     border-radius: 10px;
 }
 
+/* .thought-item-container {
+    transition: 2s ease-in;
+    transform-origin: left top;
+}
+
+.thought-item-container:target {
+    transform: scaleY(1);
+} */
+
 .thought-message {
     word-break: break-word;
     font-size: 17px;
