--- a/code/src/components/LoadingSpinner.css
+++ b/code/src/components/LoadingSpinner.css
@@ -17,7 +17,7 @@
     position: absolute;
     bottom: 55vh;
     font-size: 25px;
-    color: antiquewhite;
+    color: rgb(250, 235, 215);
 }
 
 .circle {
