--- a/code/src/components/ThoughtForm.css
+++ b/code/src/components/ThoughtForm.css
@@ -5,7 +5,7 @@
     border: none;
     padding: 10px;
     box-sizing: content-box;
-    background-color: rgba(194, 210, 255, 0.904);
+    background-color: rgba(44, 51, 71, 0.808);
     width: 45vh;
     border-radius: 10px;
     font-weight: bold;
@@ -13,14 +13,14 @@
 
 .label-title {
     font-size: 17px;
-    color: rgb(42, 45, 54);
+    color: rgb(250, 235, 215);
 }
 
 .submit-button {
     border-radius: 10px;
     width: 200px;
     border: none;
-    background-color: rgb(226, 224, 250);
+    background-color: rgba(226, 224, 250, 0.671);
     height: 30px;
     cursor: pointer;
     font-family: 'Poiret One';
@@ -29,19 +29,24 @@
     line-height: 2px;
     transition: .2s ease-in-out;
     box-shadow: 0px 2px 2px rgb(42, 45, 54);
+    letter-spacing: 0.5px;
+}
+
+.submit-button:hover {
+    box-shadow: 0 0 5px rgb(244, 224, 250);
 }
 
 .submit-button:active {
-    -ms-transform: translateY(2px);
-    -webkit-transform: translateY(2px);
-    transform: translateY(2px);
+    -ms-transform: scale(0.99);
+    -webkit-transform: scale(0.99);
+    transform: scale(0.99);
     box-shadow: 0 0 1px rgb(42, 45, 54);
 }
 
 .input-form {
     height: 55px;
     resize: none;
-    background-color: rgba(226, 224, 250, 0.76);
+    background-color: rgba(226, 224, 250, 0.671);
     border: 2px solid rgba(42, 45, 54, 0);
     border-radius: 10px;
     font-family: 'Poiret One';
@@ -50,11 +55,16 @@
     color: rgb(42, 45, 54);
 }
 
+.input-form::placeholder {
+    font-style: italic;
+}
+
 .input-form:focus {
     outline: none;
     border: 2px solid rgba(42, 45, 54, 0.507);
 }
 
 .character-counter {
-    color: rgba(42, 45, 54, 0.637);
+    color: rgba(250, 235, 215, 0.712);
+    letter-spacing: 0.5px;
 }
