--- a/code/src/components/PostNewThought/PostNewThought.css
+++ b/code/src/components/PostNewThought/PostNewThought.css
@@ -1,13 +1,13 @@
 form {
-  width: 450px;
-  height: 250px;
+  width: 325px;
+  height: 280px;
   margin: 10px;
   padding: 20px;
   border: 1px solid black;
   box-shadow: 8px 8px black;
   background-color: #f2f0f0;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto 1fr auto auto;
   row-gap: 10px;
 }
 
@@ -23,7 +23,7 @@ input {
   border-bottom-left-radius: 50px;
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
-  width: 60%;
+  width: 80%;
   height: 50px;
   border: 1px solid black;
 }
@@ -41,4 +41,26 @@ input {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
+}
+
+@media (min-width: 668px) and (max-width: 1079px) {
+  form {
+    width: 450px;
+  }
+
+  .submit-button {
+    width: 60%;
+  }
+}
+/* 
+--------------------------DESKTOP ADAPTION ------------------------- */
+
+@media (min-width: 1080px) {
+  form {
+    width: 450px;
+  }
+
+  .submit-button {
+    width: 60%;
+  }
 }
