--- a/code/src/components/ThoughtsList/ThoughtsList.css
+++ b/code/src/components/ThoughtsList/ThoughtsList.css
@@ -1,12 +1,6 @@
-.thoughts__container {
-  width: 100%;
-}
-
 .thoughts__thought-container {
-  width: 450px;
-  height: 180px;
-  margin: 10px;
-  margin-top: 20px;
+  width: 325px;
+  margin: 20px 10px;
   padding: 20px;
   border: 1px solid black;
   box-shadow: 8px 8px black;
@@ -16,6 +10,7 @@
 
 .thoughts__message {
   overflow-wrap: anywhere;
+  margin-bottom: 20px;
 }
 
 .thoughts__likes-time {
@@ -35,4 +30,18 @@
 
 .icon__heart:hover {
   cursor: pointer;
+}
+
+@media (min-width: 668px) and (max-width: 1079px) {
+  .thoughts__thought-container {
+    width: 450px;
+  }
+}
+/* 
+--------------------------DESKTOP ADAPTION ------------------------- */
+
+@media (min-width: 1080px) {
+  .thoughts__thought-container {
+    width: 450px;
+  }
 }
