--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -12,20 +13,99 @@ code {
     monospace;
 }
 
-.thought-wrapper {
+.form {
   display: flex;
   width: 300px;
+  height: 150px;
   padding: 16px;
   margin-top: 80px;
   margin-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: column;
   border: 2px solid black;
+  box-shadow: 8px 8px 0 -2px black;
+  background-color: lightgray;
+  overflow-wrap: break-word;
+}
+
+.thought-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: column;
+  width: 300px;
+  padding: 16px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid black;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  box-shadow: 8px 8px 0 -2px black;
+}
+
+.thought-input{
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+.new-thought {
+  height: 90px;
+  padding: 0 10px 0 10px;
+  margin: 8px;
+}
+
+.send-thought-button{
+  background-color: rgb(253, 112, 112);
+  width: 60%;
+  height: 50px;
+  border-radius: 450%;
+  margin: auto;
+}
+
   
+.like-button{
+  width: 40px;
+  height: 40px;
+  background-color: rgb(248, 167, 167);
 }
 
 .date {
   font-style: italic;
+  font-size: 10px;
 }
 
 
+
+
+
+
+
+
+
+/* 
+ .main-heading{
+   width: 100%;
+   border-bottom: solid 2px rgb(73, 73, 73);
+   display: block;
+   text-align: center;
+ }
+ .album-grid-container {
+ display: grid;
+ justify-self: center;
+ grid-template-columns: 1fr;
+ column-gap: 20px;
+ row-gap: 40px;
+ }
+ 
+ .album-grid-container > {
+   justify-self: center;
+ }
+ 
+ .album-card-container{
+   display: flex;
+   flex-direction: column;
+   margin: auto;*/
