--- a/code/src/index.css
+++ b/code/src/index.css
@@ -32,6 +32,8 @@ body {
 	max-width: 520px;
 	margin: auto; /* Change this when I add flex to the main container */
 	margin-top: 40px;
+	margin-bottom: 40px;
+	/* margin: 40px 20px; */
 	padding: 20px;
 	border: solid #000000 2px;
 	box-shadow: 10px 10px 0px -2px #000000;
@@ -193,5 +195,16 @@ body {
 	100% {
 		opacity: 1;
 		transform: translateY(0);
+	}
+} */
+
+/* @media (min-width: 600px) {
+	.thought-container,
+	.form-container {
+		width: 520px;
+	}
+	.thoughts-section {
+		display: flex;
+		flex-wrap: wrap;
 	}
 } */
