--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,16 +1,3 @@
-/* body {
-	margin: 10px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	font-family: "Roboto Mono", monospace;
-	font-weight: 400;
-} */
-
-/* code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-} */
-
 * {
 	margin: 0;
 	padding: 0;
@@ -23,17 +10,15 @@ body {
 	font-size: 18px;
 	line-height: 25px;
 	background-color: #f3b1af;
-	/* background-color: #f2f0f0; */
 }
 
 .thought-container,
 .form-container {
 	box-sizing: border-box;
 	max-width: 520px;
-	margin: auto; /* Change this when I add flex to the main container */
+	margin: auto;
 	margin-top: 40px;
 	margin-bottom: 40px;
-	/* margin: 40px 20px; */
 	padding: 20px;
 	border: solid #000000 2px;
 	box-shadow: 10px 10px 0px -2px #000000;
@@ -48,7 +33,7 @@ body {
 }
 
 .thoughts-messages {
-	overflow-wrap: break-word; /* Maybe change this so it only happens to words longer than 44 character*/
+	overflow-wrap: break-word;
 }
 
 .form-container {
