--- a/code/src/components/SubmitButton.css
+++ b/code/src/components/SubmitButton.css
@@ -1,8 +1,8 @@
-@import url(//db.onlinewebfonts.com/c/395410b1fd4cca8cfb17bd78a9c34889?family=Helvetica+Monospaced);
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 
 * {
-  font-family: Helvetica Monospaced;
+  font-family: 'Roboto Mono', monospace;
   text-rendering: optimizeLegibility;
 }
 
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     margin-top: 7px;
+    
 }
 
 .submit-button:hover {
