--- a/code/src/index.css
+++ b/code/src/index.css
@@ -235,6 +235,45 @@ font-weight: 100;
 
 }
 
+
+.load{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+font-size: 50px;
+
+animation: blur .75s ease-out infinite;
+text-shadow: 0px 0px 5px #fff, 0px 0px 7px #fff;
+}
+
+@keyframes blur {
+from {
+  text-shadow:0px 0px 10px #fff,
+	0px 0px 10px #fff, 
+	0px 0px 25px #fff,
+	0px 0px 25px #fff,
+	0px 0px 25px #fff,
+	0px 0px 25px #fff,
+	0px 0px 25px #fff,
+	0px 0px 25px rgb(255, 230, 0),
+	0px 0px 50px rgb(231, 255, 11),
+	0px 0px 50px rgb(255, 217, 1),
+	0px 0px 50px #ff0f0f,
+	0px 0px 150px #ff0f0f,
+	0px 10px 100px #ff0f0f,
+	0px 10px 100px #ff0f0f,
+	0px 10px 100px #ff0f0f,
+	0px 10px 100px #fbff00,
+	0px -10px 100px #ffd900,
+	0px -10px 100px #ff9900;
+}
+}
+
+
+
+
 @media (max-width:500px) {
 	
 	.TextPost p{
