--- a/code/src/components/ThoughtItem.css
+++ b/code/src/components/ThoughtItem.css
@@ -9,21 +9,6 @@
     border-radius: 10px;
 }
 
-.thought-item-container {
-    animation: topToBottom ease 1s;
-    -webkit-animation: topToBottom ease 1s;
-    -moz-animation: topToBottom ease 1s;
-}
-
-@keyframes topToBottom {
-    0% {
-        margin-top: -10%;
-    }
-    100% {
-        margin-top: 0%;
-    }
-}
-
 .thought-message {
     word-break: break-word;
     font-size: 17px;
@@ -69,7 +54,64 @@
     animation-timing-function: linear;
 }
 
+.thought-item-container {
+    animation: topToBottom ease 1s;
+    -webkit-animation: topToBottom ease 1s;
+    -moz-animation: topToBottom ease 1s;
+}
+
+@keyframes topToBottom {
+    0% {
+        margin-top: -10%;
+    }
+    100% {
+        margin-top: 0%;
+    }
+}
+
+@-webkit-keyframes topToBottom {
+    0% {
+        margin-top: -10%;
+    }
+    100% {
+        margin-top: 0%;
+    }
+}
+
+@-moz-keyframes topToBottom {
+    0% {
+        margin-top: -10%;
+    }
+    100% {
+        margin-top: 0%;
+    }
+}
+
 @keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@-webkit-keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@-moz-keyframes pulse {
     0% {
         transform: scale(1);
     }
