--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,14 +5,7 @@
 
 body {
 	margin: 10px;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-appearance: none;
-	-webkit-input: none;
-	-webkit-button: none;
+	font-family: 'Trispace', sans-serif;
 	background-image: url("/assets/heart-background.png");
     background-size:contain;
     background-position:top;
