--- a/code/src/index.css
+++ b/code/src/index.css
@@ -86,6 +86,15 @@ textarea {
   padding: 10px;
   font-size: 20px;
 }
+
+.heart-liked {
+  width: 50px;
+  color: red;
+  background-color: rgb(228, 169, 165);
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 20px;
+}
 .counter {
   background-color: white;
   border: 1px solid black;
